fixed login+signup form alignment; Added news page; changed buttons to orange colour; map view issues is NOT fixed

--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -8,12 +8,12 @@ html, body{
 	margin: 0;
 	padding: 0;
 	border: none;
-	background: #300032;
+	background-color: #300032;
 //	background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
 //	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
 //	background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
 //	background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
-	color: white;
+	color: #e6e6e8;
 }
 
 /* --- Header --- */
@@ -23,7 +23,7 @@ html, body{
 	background-color: #06000a;
 	text-align: right;
 	padding: 5px 0 5px 0;
-	color: white;
+	color: #e6e6e8;
 	margin: 0;
 }
 .logo_image{
@@ -35,7 +35,7 @@ html, body{
 .banner {
 	text-align: center;
 	margin: 0px 0 7px 0;
-	background-color: white;
+	background-color: #e6e6e8;
 	height: 80px;
 }
 .logo_image{
@@ -47,37 +47,45 @@ html, body{
 }
 .app_name{
 	text-align:center;
-	color: white;
+	color: #e6e6e8;
 	font-style: bold;
 	text-decoration: none;
 	margin-right:250px;
 }
 .navbar{
-	color:white;
+	color:#e6e6e8;
 	float:right;
 	margin-right:50px;
 }
 
 .mylogin{
-	background-color: green;
-	color: white;
+	background-color: #F79220;
+	color: #e6e6e8;
 	text-decoration: none;
 	font-family: sans-serif;
 	border-radius: 3px;
 	padding: 5px 10px;	
-	
+	border: none;
 }
-
+.mylogin:hover {
+	background-color: #F79220;
+}
+.mylogin:active {
+	background-color: #F79220;
+	box-shadow: inset 0 0 7px 1px black;
+}
 
 
 
 /* --- Home Page Content --- */
 .home_page_content {
-	color:white;
+	color:#e6e6e8;
 	padding: 0 0 0 0;
 }
 
-.fixed-table-container{border: 0px;}
+.fixed-table-container{
+	border: 0px;
+}
 
 .table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
     border-bottom: 0px !important;
@@ -86,8 +94,14 @@ html, body{
 }
 
 .menu_stuff{
-	width:1800px;
+	width: 95%;
+	text-align: center;
 }
+
+.form_style{
+	color: #e6e6e8;
+}
+
 
 /* --- Footer --- */
 .footer {
@@ -114,18 +128,18 @@ hr{
 	display:inline;
 }
 .menu ul li a {
-	background-color: green;
-	color: white;
+	background-color: #F79220;
+	color: #e6e6e8;
 	text-decoration: none;
 	font-family: sans-serif;
 	border-radius: 3px;
 	padding: 5px 10px;
 }
 .menu ul li a:hover {
-	background-color: green;
+	background-color: #F79220;
 }
 .menu ul li a:active {
-	background-color: green;
+	background-color: #F79220;
 	box-shadow: inset 0 0 7px 1px black;
 }
 .mission_statement{
@@ -143,10 +157,15 @@ hr{
 
 /* --- Yield Container --- */
 .content {
-	width: 90vw;
+	//width: 90%;
 	min-width: 320px;
 	margin:auto;
 	text-align: center;
-	min-height: 180px;
+	min-height: 75%;
+	background-color:#300032;
 }
 
+.center_div{
+    margin: 0 auto;
+    width:80% /* value of your choice which suits your alignment */
+}
